<resources>
    <string name="app_name">Sample</string>
    <string name="action_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="title_change_password">Change Password</string>
    <string name="hint_new_password">Ex 0212</string>
    <string name="action_submit">Submit</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="title_new_password">New Password</string>
</resources>
