<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginViewModel"
            type="com.sample.app.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                style="?attr/logo"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username_tv"
                style="?attr/input_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="80dp"
                android:hint="@string/hint_username"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@={loginViewModel.userName}" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_tv"
                style="?attr/input_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@={loginViewModel.password}" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="?attr/action_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:onClick="@{()->loginViewModel.doLogin()}"
                android:text="@string/action_login" />
        </LinearLayout>

    </LinearLayout>

</layout>