<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.sample.app.viewmodel.ChangePasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="25dp"
                android:onClick="@{()->viewModel.onBackClick()}"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_left" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/title_tv"
                    style="?attr/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/title_change_password" />

                <com.sample.app.utils.view.StepperIndicator
                    android:id="@+id/step_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    style="?attr/sub_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:text="@string/title_new_password" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_password_tv"
                    style="?attr/grey_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@={viewModel.newPasspord}" />


                <android.support.v7.widget.AppCompatTextView
                    style="?attr/sub_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/title_confirm_password" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password_tv"
                    style="?attr/grey_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@={viewModel.confirmPassword}" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit_btn"
                    style="?attr/action_button"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:onClick="@{()->viewModel.doChangePassword()}"
                    android:text="@string/action_submit" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</layout>